--- a/notebooks/Obtain-BRs.ipynb
+++ b/notebooks/Obtain-BRs.ipynb
@@ -6,8 +6,8 @@
    "id": "2b2b63c1",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-09-18T13:21:44.289991Z",
-     "start_time": "2023-09-18T13:21:42.568469Z"
+     "end_time": "2023-09-19T16:32:38.720443Z",
+     "start_time": "2023-09-19T16:32:32.667897Z"
     }
    },
    "outputs": [],
@@ -52,8 +52,8 @@
    "id": "acce48f4",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-09-18T13:21:44.299946Z",
-     "start_time": "2023-09-18T13:21:44.293361Z"
+     "end_time": "2023-09-19T16:32:38.729628Z",
+     "start_time": "2023-09-19T16:32:38.722598Z"
     }
    },
    "outputs": [],
@@ -68,8 +68,8 @@
    "id": "91f2117f",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-09-18T13:21:44.569440Z",
-     "start_time": "2023-09-18T13:21:44.302756Z"
+     "end_time": "2023-09-19T16:32:38.995039Z",
+     "start_time": "2023-09-19T16:32:38.732371Z"
     }
    },
    "outputs": [],
@@ -103,8 +103,8 @@
    "id": "5b22801c",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-09-18T13:21:54.620208Z",
-     "start_time": "2023-09-18T13:21:44.576087Z"
+     "end_time": "2023-09-19T16:32:46.600213Z",
+     "start_time": "2023-09-19T16:32:38.996794Z"
     }
    },
    "outputs": [],
@@ -112,8 +112,8 @@
     "for gq in gqV:\n",
     "    for g in gchi:\n",
     "        for m in MZp:\n",
-    "            gqL = (gqA + gq)/2.\n",
-    "            gqR = (-gqA + gq)/2.\n",
+    "            gqL = (gqA + gq)\n",
+    "            gqR = (-gqA + gq)\n",
     "            \n",
     "            # Zp to t \n",
     "            if m < 2*MT:\n",
@@ -161,8 +161,8 @@
    "id": "bc3fa6c0",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-09-18T13:21:54.655199Z",
-     "start_time": "2023-09-18T13:21:54.624253Z"
+     "end_time": "2023-09-19T16:32:46.641992Z",
+     "start_time": "2023-09-19T16:32:46.602346Z"
     }
    },
    "outputs": [
@@ -205,7 +205,7 @@
        "      <td>NaN</td>\n",
        "      <td>0.1</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>0.405367</td>\n",
+       "      <td>0.145612</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -215,7 +215,7 @@
        "      <td>NaN</td>\n",
        "      <td>0.1</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>0.623433</td>\n",
+       "      <td>0.292732</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -225,7 +225,7 @@
        "      <td>NaN</td>\n",
        "      <td>0.1</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>0.725391</td>\n",
+       "      <td>0.397730</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -235,7 +235,7 @@
        "      <td>NaN</td>\n",
        "      <td>0.1</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>0.781062</td>\n",
+       "      <td>0.471424</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -245,7 +245,7 @@
        "      <td>NaN</td>\n",
        "      <td>0.1</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>0.815220</td>\n",
+       "      <td>0.524479</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -265,7 +265,7 @@
        "      <td>NaN</td>\n",
        "      <td>2.0</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>0.876400</td>\n",
+       "      <td>0.639335</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5736</th>\n",
@@ -275,7 +275,7 @@
        "      <td>NaN</td>\n",
        "      <td>2.0</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>0.876402</td>\n",
+       "      <td>0.639340</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5737</th>\n",
@@ -285,7 +285,7 @@
        "      <td>NaN</td>\n",
        "      <td>2.0</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>0.876404</td>\n",
+       "      <td>0.639344</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5738</th>\n",
@@ -295,7 +295,7 @@
        "      <td>NaN</td>\n",
        "      <td>2.0</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>0.876406</td>\n",
+       "      <td>0.639348</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5739</th>\n",
@@ -305,7 +305,7 @@
        "      <td>NaN</td>\n",
        "      <td>2.0</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>0.876408</td>\n",
+       "      <td>0.639353</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -327,17 +327,17 @@
        "5739  $Z^{\\prime}$       3000     0.25           NaN         2.0         NaN   \n",
        "\n",
        "      $BR(med>\\chi\\chi)$  \n",
-       "0               0.405367  \n",
-       "1               0.623433  \n",
-       "2               0.725391  \n",
-       "3               0.781062  \n",
-       "4               0.815220  \n",
+       "0               0.145612  \n",
+       "1               0.292732  \n",
+       "2               0.397730  \n",
+       "3               0.471424  \n",
+       "4               0.524479  \n",
        "...                  ...  \n",
-       "5735            0.876400  \n",
-       "5736            0.876402  \n",
-       "5737            0.876404  \n",
-       "5738            0.876406  \n",
-       "5739            0.876408  \n",
+       "5735            0.639335  \n",
+       "5736            0.639340  \n",
+       "5737            0.639344  \n",
+       "5738            0.639348  \n",
+       "5739            0.639353  \n",
        "\n",
        "[5740 rows x 7 columns]"
       ]
@@ -357,8 +357,8 @@
    "id": "96e830b9",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-09-18T13:21:54.894497Z",
-     "start_time": "2023-09-18T13:21:54.658977Z"
+     "end_time": "2023-09-19T16:32:46.987724Z",
+     "start_time": "2023-09-19T16:32:46.643952Z"
     }
    },
    "outputs": [],
@@ -406,8 +406,8 @@
    "id": "5ed2ab8c",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-09-18T13:22:00.101251Z",
-     "start_time": "2023-09-18T13:21:54.898247Z"
+     "end_time": "2023-09-19T16:32:50.284407Z",
+     "start_time": "2023-09-19T16:32:46.992255Z"
     }
    },
    "outputs": [],
@@ -488,8 +488,8 @@
    "id": "d10bc17d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-09-18T13:22:00.126178Z",
-     "start_time": "2023-09-18T13:22:00.103351Z"
+     "end_time": "2023-09-19T16:32:50.301000Z",
+     "start_time": "2023-09-19T16:32:50.285941Z"
     }
    },
    "outputs": [
@@ -532,7 +532,7 @@
        "      <td>NaN</td>\n",
        "      <td>0.1</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>0.405367</td>\n",
+       "      <td>0.145612</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -542,7 +542,7 @@
        "      <td>NaN</td>\n",
        "      <td>0.1</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>0.623433</td>\n",
+       "      <td>0.292732</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -552,7 +552,7 @@
        "      <td>NaN</td>\n",
        "      <td>0.1</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>0.725391</td>\n",
+       "      <td>0.397730</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -562,7 +562,7 @@
        "      <td>NaN</td>\n",
        "      <td>0.1</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>0.781062</td>\n",
+       "      <td>0.471424</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -572,7 +572,7 @@
        "      <td>NaN</td>\n",
        "      <td>0.1</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>0.815220</td>\n",
+       "      <td>0.524479</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -654,11 +654,11 @@
        "7794       $S_{d}$       1500      NaN           0.3         NaN         2.0   \n",
        "\n",
        "      $BR(med>\\chi\\chi)$  \n",
-       "0               0.405367  \n",
-       "1               0.623433  \n",
-       "2               0.725391  \n",
-       "3               0.781062  \n",
-       "4               0.815220  \n",
+       "0               0.145612  \n",
+       "1               0.292732  \n",
+       "2               0.397730  \n",
+       "3               0.471424  \n",
+       "4               0.524479  \n",
        "...                  ...  \n",
        "7790            0.226537  \n",
        "7791            0.224156  \n",
@@ -684,8 +684,8 @@
    "id": "61c7dfbf",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-09-18T13:22:00.371021Z",
-     "start_time": "2023-09-18T13:22:00.129337Z"
+     "end_time": "2023-09-19T16:32:50.707082Z",
+     "start_time": "2023-09-19T16:32:50.303392Z"
     }
    },
    "outputs": [],
