--- a/notebooks/Obtain-BRs.ipynb
+++ b/notebooks/Obtain-BRs.ipynb
@@ -6,8 +6,8 @@
    "id": "2b2b63c1",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-09-19T16:32:38.720443Z",
-     "start_time": "2023-09-19T16:32:32.667897Z"
+     "end_time": "2023-09-20T11:38:28.773745Z",
+     "start_time": "2023-09-20T11:38:27.709178Z"
     }
    },
    "outputs": [],
@@ -52,13 +52,13 @@
    "id": "acce48f4",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-09-19T16:32:38.729628Z",
-     "start_time": "2023-09-19T16:32:38.722598Z"
+     "end_time": "2023-09-20T11:38:28.779880Z",
+     "start_time": "2023-09-20T11:38:28.775891Z"
     }
    },
    "outputs": [],
    "source": [
-    "BRdata = pd.DataFrame(columns=['Mediator', '$m_{med}$', '$g_{q}$', '$\\sin\\\\theta$', \n",
+    "BRdata = pd.DataFrame(columns=['Mediator', '$m_{med}$', '$g_{q}$', '$\\sin\\\\alpha$', \n",
     "                               '$g_{\\chi}$', '$y_{\\chi}$', '$BR(med>\\chi\\chi)$'])"
    ]
   },
@@ -68,8 +68,8 @@
    "id": "91f2117f",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-09-19T16:32:38.995039Z",
-     "start_time": "2023-09-19T16:32:38.732371Z"
+     "end_time": "2023-09-20T11:38:29.074185Z",
+     "start_time": "2023-09-20T11:38:28.781859Z"
     }
    },
    "outputs": [],
@@ -103,8 +103,8 @@
    "id": "5b22801c",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-09-19T16:32:46.600213Z",
-     "start_time": "2023-09-19T16:32:38.996794Z"
+     "end_time": "2023-09-20T11:38:36.425738Z",
+     "start_time": "2023-09-20T11:38:29.083437Z"
     }
    },
    "outputs": [],
@@ -161,8 +161,8 @@
    "id": "bc3fa6c0",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-09-19T16:32:46.641992Z",
-     "start_time": "2023-09-19T16:32:46.602346Z"
+     "end_time": "2023-09-20T11:38:36.446090Z",
+     "start_time": "2023-09-20T11:38:36.427032Z"
     }
    },
    "outputs": [
@@ -190,7 +190,7 @@
        "      <th>Mediator</th>\n",
        "      <th>$m_{med}$</th>\n",
        "      <th>$g_{q}$</th>\n",
-       "      <th>$\\sin\\theta$</th>\n",
+       "      <th>$\\sin\\alpha$</th>\n",
        "      <th>$g_{\\chi}$</th>\n",
        "      <th>$y_{\\chi}$</th>\n",
        "      <th>$BR(med&gt;\\chi\\chi)$</th>\n",
@@ -313,7 +313,7 @@
        "</div>"
       ],
       "text/plain": [
-       "          Mediator  $m_{med}$  $g_{q}$  $\\sin\\theta$  $g_{\\chi}$  $y_{\\chi}$  \\\n",
+       "          Mediator  $m_{med}$  $g_{q}$  $\\sin\\alpha$  $g_{\\chi}$  $y_{\\chi}$  \\\n",
        "0     $Z^{\\prime}$        140     0.01           NaN         0.1         NaN   \n",
        "1     $Z^{\\prime}$        150     0.01           NaN         0.1         NaN   \n",
        "2     $Z^{\\prime}$        160     0.01           NaN         0.1         NaN   \n",
@@ -357,8 +357,8 @@
    "id": "96e830b9",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-09-19T16:32:46.987724Z",
-     "start_time": "2023-09-19T16:32:46.643952Z"
+     "end_time": "2023-09-20T11:38:36.709635Z",
+     "start_time": "2023-09-20T11:38:36.447846Z"
     }
    },
    "outputs": [],
@@ -406,8 +406,8 @@
    "id": "5ed2ab8c",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-09-19T16:32:50.284407Z",
-     "start_time": "2023-09-19T16:32:46.992255Z"
+     "end_time": "2023-09-20T11:38:40.089273Z",
+     "start_time": "2023-09-20T11:38:36.711320Z"
     }
    },
    "outputs": [],
@@ -488,8 +488,8 @@
    "id": "d10bc17d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-09-19T16:32:50.301000Z",
-     "start_time": "2023-09-19T16:32:50.285941Z"
+     "end_time": "2023-09-20T11:38:40.103199Z",
+     "start_time": "2023-09-20T11:38:40.090510Z"
     }
    },
    "outputs": [
@@ -517,7 +517,7 @@
        "      <th>Mediator</th>\n",
        "      <th>$m_{med}$</th>\n",
        "      <th>$g_{q}$</th>\n",
-       "      <th>$\\sin\\theta$</th>\n",
+       "      <th>$\\sin\\alpha$</th>\n",
        "      <th>$g_{\\chi}$</th>\n",
        "      <th>$y_{\\chi}$</th>\n",
        "      <th>$BR(med&gt;\\chi\\chi)$</th>\n",
@@ -640,7 +640,7 @@
        "</div>"
       ],
       "text/plain": [
-       "          Mediator  $m_{med}$  $g_{q}$  $\\sin\\theta$  $g_{\\chi}$  $y_{\\chi}$  \\\n",
+       "          Mediator  $m_{med}$  $g_{q}$  $\\sin\\alpha$  $g_{\\chi}$  $y_{\\chi}$  \\\n",
        "0     $Z^{\\prime}$        140     0.01           NaN         0.1         NaN   \n",
        "1     $Z^{\\prime}$        150     0.01           NaN         0.1         NaN   \n",
        "2     $Z^{\\prime}$        160     0.01           NaN         0.1         NaN   \n",
@@ -684,8 +684,8 @@
    "id": "61c7dfbf",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-09-19T16:32:50.707082Z",
-     "start_time": "2023-09-19T16:32:50.303392Z"
+     "end_time": "2023-09-20T11:38:40.499045Z",
+     "start_time": "2023-09-20T11:38:40.105402Z"
     }
    },
    "outputs": [],
