--- a/notebooks/Obtain-BRs.ipynb
+++ b/notebooks/Obtain-BRs.ipynb
@@ -6,8 +6,8 @@
    "id": "2b2b63c1",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-09-20T11:38:28.773745Z",
-     "start_time": "2023-09-20T11:38:27.709178Z"
+     "end_time": "2023-09-26T16:22:11.988254Z",
+     "start_time": "2023-09-26T16:22:09.455767Z"
     }
    },
    "outputs": [],
@@ -52,8 +52,8 @@
    "id": "acce48f4",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-09-20T11:38:28.779880Z",
-     "start_time": "2023-09-20T11:38:28.775891Z"
+     "end_time": "2023-09-26T16:22:12.001714Z",
+     "start_time": "2023-09-26T16:22:11.992164Z"
     }
    },
    "outputs": [],
@@ -68,8 +68,8 @@
    "id": "91f2117f",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-09-20T11:38:29.074185Z",
-     "start_time": "2023-09-20T11:38:28.781859Z"
+     "end_time": "2023-09-26T16:22:14.386742Z",
+     "start_time": "2023-09-26T16:22:12.004882Z"
     }
    },
    "outputs": [],
@@ -103,8 +103,8 @@
    "id": "5b22801c",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-09-20T11:38:36.425738Z",
-     "start_time": "2023-09-20T11:38:29.083437Z"
+     "end_time": "2023-09-26T16:22:37.174556Z",
+     "start_time": "2023-09-26T16:22:14.389633Z"
     }
    },
    "outputs": [],
@@ -152,7 +152,7 @@
     "            # BR(Zp to quarks)\n",
     "            BR_ZPqq = (ZPuu + ZPcc + ZPtt + ZPdd + ZPss + ZPbb)/GammaZP\n",
     "            \n",
-    "            BRdata.loc[len(BRdata)] = ['$Z^{\\prime}$', m, gq, np.nan, g, np.nan, BR_ZPchichi]"
+    "            BRdata.loc[len(BRdata)] = ['spin-1', m, gq, np.nan, g, np.nan, BR_ZPchichi]"
    ]
   },
   {
@@ -161,8 +161,8 @@
    "id": "bc3fa6c0",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-09-20T11:38:36.446090Z",
-     "start_time": "2023-09-20T11:38:36.427032Z"
+     "end_time": "2023-09-26T16:22:37.229223Z",
+     "start_time": "2023-09-26T16:22:37.184460Z"
     }
    },
    "outputs": [
@@ -199,7 +199,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>$Z^{\\prime}$</td>\n",
+       "      <td>spin-1</td>\n",
        "      <td>140</td>\n",
        "      <td>0.01</td>\n",
        "      <td>NaN</td>\n",
@@ -209,7 +209,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>$Z^{\\prime}$</td>\n",
+       "      <td>spin-1</td>\n",
        "      <td>150</td>\n",
        "      <td>0.01</td>\n",
        "      <td>NaN</td>\n",
@@ -219,7 +219,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>$Z^{\\prime}$</td>\n",
+       "      <td>spin-1</td>\n",
        "      <td>160</td>\n",
        "      <td>0.01</td>\n",
        "      <td>NaN</td>\n",
@@ -229,7 +229,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>$Z^{\\prime}$</td>\n",
+       "      <td>spin-1</td>\n",
        "      <td>170</td>\n",
        "      <td>0.01</td>\n",
        "      <td>NaN</td>\n",
@@ -239,7 +239,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>$Z^{\\prime}$</td>\n",
+       "      <td>spin-1</td>\n",
        "      <td>180</td>\n",
        "      <td>0.01</td>\n",
        "      <td>NaN</td>\n",
@@ -259,7 +259,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5735</th>\n",
-       "      <td>$Z^{\\prime}$</td>\n",
+       "      <td>spin-1</td>\n",
        "      <td>2960</td>\n",
        "      <td>0.25</td>\n",
        "      <td>NaN</td>\n",
@@ -269,7 +269,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5736</th>\n",
-       "      <td>$Z^{\\prime}$</td>\n",
+       "      <td>spin-1</td>\n",
        "      <td>2970</td>\n",
        "      <td>0.25</td>\n",
        "      <td>NaN</td>\n",
@@ -279,7 +279,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5737</th>\n",
-       "      <td>$Z^{\\prime}$</td>\n",
+       "      <td>spin-1</td>\n",
        "      <td>2980</td>\n",
        "      <td>0.25</td>\n",
        "      <td>NaN</td>\n",
@@ -289,7 +289,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5738</th>\n",
-       "      <td>$Z^{\\prime}$</td>\n",
+       "      <td>spin-1</td>\n",
        "      <td>2990</td>\n",
        "      <td>0.25</td>\n",
        "      <td>NaN</td>\n",
@@ -299,7 +299,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5739</th>\n",
-       "      <td>$Z^{\\prime}$</td>\n",
+       "      <td>spin-1</td>\n",
        "      <td>3000</td>\n",
        "      <td>0.25</td>\n",
        "      <td>NaN</td>\n",
@@ -313,18 +313,18 @@
        "</div>"
       ],
       "text/plain": [
-       "          Mediator  $m_{med}$  $g_{q}$  $\\sin\\alpha$  $g_{\\chi}$  $y_{\\chi}$  \\\n",
-       "0     $Z^{\\prime}$        140     0.01           NaN         0.1         NaN   \n",
-       "1     $Z^{\\prime}$        150     0.01           NaN         0.1         NaN   \n",
-       "2     $Z^{\\prime}$        160     0.01           NaN         0.1         NaN   \n",
-       "3     $Z^{\\prime}$        170     0.01           NaN         0.1         NaN   \n",
-       "4     $Z^{\\prime}$        180     0.01           NaN         0.1         NaN   \n",
-       "...            ...        ...      ...           ...         ...         ...   \n",
-       "5735  $Z^{\\prime}$       2960     0.25           NaN         2.0         NaN   \n",
-       "5736  $Z^{\\prime}$       2970     0.25           NaN         2.0         NaN   \n",
-       "5737  $Z^{\\prime}$       2980     0.25           NaN         2.0         NaN   \n",
-       "5738  $Z^{\\prime}$       2990     0.25           NaN         2.0         NaN   \n",
-       "5739  $Z^{\\prime}$       3000     0.25           NaN         2.0         NaN   \n",
+       "     Mediator  $m_{med}$  $g_{q}$  $\\sin\\alpha$  $g_{\\chi}$  $y_{\\chi}$  \\\n",
+       "0      spin-1        140     0.01           NaN         0.1         NaN   \n",
+       "1      spin-1        150     0.01           NaN         0.1         NaN   \n",
+       "2      spin-1        160     0.01           NaN         0.1         NaN   \n",
+       "3      spin-1        170     0.01           NaN         0.1         NaN   \n",
+       "4      spin-1        180     0.01           NaN         0.1         NaN   \n",
+       "...       ...        ...      ...           ...         ...         ...   \n",
+       "5735   spin-1       2960     0.25           NaN         2.0         NaN   \n",
+       "5736   spin-1       2970     0.25           NaN         2.0         NaN   \n",
+       "5737   spin-1       2980     0.25           NaN         2.0         NaN   \n",
+       "5738   spin-1       2990     0.25           NaN         2.0         NaN   \n",
+       "5739   spin-1       3000     0.25           NaN         2.0         NaN   \n",
        "\n",
        "      $BR(med>\\chi\\chi)$  \n",
        "0               0.145612  \n",
@@ -357,8 +357,8 @@
    "id": "96e830b9",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-09-20T11:38:36.709635Z",
-     "start_time": "2023-09-20T11:38:36.447846Z"
+     "end_time": "2023-09-26T16:22:37.668555Z",
+     "start_time": "2023-09-26T16:22:37.232714Z"
     }
    },
    "outputs": [],
@@ -366,38 +366,43 @@
     "## spin-0 mediator ##\n",
     "\n",
     "# mediator mass\n",
-    "MSd = np.arange(140, 1510, 10)\n",
+    "MSd = np.arange(140, 1600, 10)\n",
     "\n",
     "# quarks masses\n",
     "MT = 172\n",
     "\n",
     "# tau lepton mass\n",
-    "MTA = 1.78\n",
+    "MTA = 1.777\n",
     "\n",
     "# DM mass\n",
     "Mchi = 65.0\n",
     "\n",
     "# gauge bosons masses\n",
-    "MW = 80.4\n",
-    "MZ = 91.2\n",
-    "MZp = 3000.0\n",
+    "MW = 79.824\n",
+    "MZ = 91.1876\n",
+    "MZp = 2000.0\n",
     "\n",
     "# higgs boson mass\n",
-    "MH = 125.3\n",
+    "MH = 125.0\n",
+    "\n",
+    "aEWM1 = 127.9\n",
+    "aEW = 1/aEWM1\n",
+    "ee = 2*np.sqrt(aEW)*np.sqrt(np.pi)\n",
+    "\n",
+    "sw2 = 1 - MW**2/MZ**2\n",
+    "sw = np.sqrt(sw2)\n",
+    "cw = np.sqrt(1 - sw2)\n",
     "\n",
     "# vevs\n",
-    "vev = 246\n",
+    "vev = (2*MW*sw)/ee\n",
     "gchi = 1.0\n",
     "vev2 = MZp/(2*gchi)\n",
     "\n",
     "# couplings\n",
     "ychi = np.array([0.1, 0.5, 1.0, 1.5, 2.0])\n",
-    "yt = np.sqrt(2)*MT/vev2\n",
-    "ytau = np.sqrt(2)*MTA/vev2\n",
-    "cw = MW/MZ\n",
-    "sw = np.sqrt(1 - cw**2)\n",
-    "ee = (2*MW*sw)/vev\n",
-    "Sa = np.array([0.1, 0.2, 0.3])\n"
+    "yt = np.sqrt(2)*MT/vev\n",
+    "ytau = np.sqrt(2)*MTA/vev\n",
+    "Sa = np.array([0.1, 0.2, 0.25])\n"
    ]
   },
   {
@@ -406,8 +411,8 @@
    "id": "5ed2ab8c",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-09-20T11:38:40.089273Z",
-     "start_time": "2023-09-20T11:38:36.711320Z"
+     "end_time": "2023-09-26T16:22:46.809228Z",
+     "start_time": "2023-09-26T16:22:37.671836Z"
     }
    },
    "outputs": [],
@@ -479,7 +484,7 @@
     "            # BR(S to DM)\n",
     "            BR_Schichi = Schichi / GammaS\n",
     "            \n",
-    "            BRdata.loc[len(BRdata)] = ['$S_{d}$', m, np.nan, s, np.nan, y, BR_Schichi]"
+    "            BRdata.loc[len(BRdata)] = ['spin-0', m, np.nan, s, np.nan, y, BR_Schichi]"
    ]
   },
   {
@@ -488,8 +493,8 @@
    "id": "d10bc17d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-09-20T11:38:40.103199Z",
-     "start_time": "2023-09-20T11:38:40.090510Z"
+     "end_time": "2023-09-26T16:22:46.842186Z",
+     "start_time": "2023-09-26T16:22:46.812904Z"
     }
    },
    "outputs": [
@@ -526,7 +531,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>$Z^{\\prime}$</td>\n",
+       "      <td>spin-1</td>\n",
        "      <td>140</td>\n",
        "      <td>0.01</td>\n",
        "      <td>NaN</td>\n",
@@ -536,7 +541,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>$Z^{\\prime}$</td>\n",
+       "      <td>spin-1</td>\n",
        "      <td>150</td>\n",
        "      <td>0.01</td>\n",
        "      <td>NaN</td>\n",
@@ -546,7 +551,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>$Z^{\\prime}$</td>\n",
+       "      <td>spin-1</td>\n",
        "      <td>160</td>\n",
        "      <td>0.01</td>\n",
        "      <td>NaN</td>\n",
@@ -556,7 +561,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>$Z^{\\prime}$</td>\n",
+       "      <td>spin-1</td>\n",
        "      <td>170</td>\n",
        "      <td>0.01</td>\n",
        "      <td>NaN</td>\n",
@@ -566,7 +571,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>$Z^{\\prime}$</td>\n",
+       "      <td>spin-1</td>\n",
        "      <td>180</td>\n",
        "      <td>0.01</td>\n",
        "      <td>NaN</td>\n",
@@ -585,73 +590,73 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7790</th>\n",
-       "      <td>$S_{d}$</td>\n",
-       "      <td>1460</td>\n",
+       "      <th>7925</th>\n",
+       "      <td>spin-0</td>\n",
+       "      <td>1550</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>0.3</td>\n",
+       "      <td>0.25</td>\n",
        "      <td>NaN</td>\n",
        "      <td>2.0</td>\n",
-       "      <td>0.226537</td>\n",
+       "      <td>0.268006</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7791</th>\n",
-       "      <td>$S_{d}$</td>\n",
-       "      <td>1470</td>\n",
+       "      <th>7926</th>\n",
+       "      <td>spin-0</td>\n",
+       "      <td>1560</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>0.3</td>\n",
+       "      <td>0.25</td>\n",
        "      <td>NaN</td>\n",
        "      <td>2.0</td>\n",
-       "      <td>0.224156</td>\n",
+       "      <td>0.265570</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7792</th>\n",
-       "      <td>$S_{d}$</td>\n",
-       "      <td>1480</td>\n",
+       "      <th>7927</th>\n",
+       "      <td>spin-0</td>\n",
+       "      <td>1570</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>0.3</td>\n",
+       "      <td>0.25</td>\n",
        "      <td>NaN</td>\n",
        "      <td>2.0</td>\n",
-       "      <td>0.221810</td>\n",
+       "      <td>0.263163</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7793</th>\n",
-       "      <td>$S_{d}$</td>\n",
-       "      <td>1490</td>\n",
+       "      <th>7928</th>\n",
+       "      <td>spin-0</td>\n",
+       "      <td>1580</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>0.3</td>\n",
+       "      <td>0.25</td>\n",
        "      <td>NaN</td>\n",
        "      <td>2.0</td>\n",
-       "      <td>0.219496</td>\n",
+       "      <td>0.260784</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7794</th>\n",
-       "      <td>$S_{d}$</td>\n",
-       "      <td>1500</td>\n",
+       "      <th>7929</th>\n",
+       "      <td>spin-0</td>\n",
+       "      <td>1590</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>0.3</td>\n",
+       "      <td>0.25</td>\n",
        "      <td>NaN</td>\n",
        "      <td>2.0</td>\n",
-       "      <td>0.217215</td>\n",
+       "      <td>0.258433</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>7795 rows × 7 columns</p>\n",
+       "<p>7930 rows × 7 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "          Mediator  $m_{med}$  $g_{q}$  $\\sin\\alpha$  $g_{\\chi}$  $y_{\\chi}$  \\\n",
-       "0     $Z^{\\prime}$        140     0.01           NaN         0.1         NaN   \n",
-       "1     $Z^{\\prime}$        150     0.01           NaN         0.1         NaN   \n",
-       "2     $Z^{\\prime}$        160     0.01           NaN         0.1         NaN   \n",
-       "3     $Z^{\\prime}$        170     0.01           NaN         0.1         NaN   \n",
-       "4     $Z^{\\prime}$        180     0.01           NaN         0.1         NaN   \n",
-       "...            ...        ...      ...           ...         ...         ...   \n",
-       "7790       $S_{d}$       1460      NaN           0.3         NaN         2.0   \n",
-       "7791       $S_{d}$       1470      NaN           0.3         NaN         2.0   \n",
-       "7792       $S_{d}$       1480      NaN           0.3         NaN         2.0   \n",
-       "7793       $S_{d}$       1490      NaN           0.3         NaN         2.0   \n",
-       "7794       $S_{d}$       1500      NaN           0.3         NaN         2.0   \n",
+       "     Mediator  $m_{med}$  $g_{q}$  $\\sin\\alpha$  $g_{\\chi}$  $y_{\\chi}$  \\\n",
+       "0      spin-1        140     0.01           NaN         0.1         NaN   \n",
+       "1      spin-1        150     0.01           NaN         0.1         NaN   \n",
+       "2      spin-1        160     0.01           NaN         0.1         NaN   \n",
+       "3      spin-1        170     0.01           NaN         0.1         NaN   \n",
+       "4      spin-1        180     0.01           NaN         0.1         NaN   \n",
+       "...       ...        ...      ...           ...         ...         ...   \n",
+       "7925   spin-0       1550      NaN          0.25         NaN         2.0   \n",
+       "7926   spin-0       1560      NaN          0.25         NaN         2.0   \n",
+       "7927   spin-0       1570      NaN          0.25         NaN         2.0   \n",
+       "7928   spin-0       1580      NaN          0.25         NaN         2.0   \n",
+       "7929   spin-0       1590      NaN          0.25         NaN         2.0   \n",
        "\n",
        "      $BR(med>\\chi\\chi)$  \n",
        "0               0.145612  \n",
@@ -660,13 +665,13 @@
        "3               0.471424  \n",
        "4               0.524479  \n",
        "...                  ...  \n",
-       "7790            0.226537  \n",
-       "7791            0.224156  \n",
-       "7792            0.221810  \n",
-       "7793            0.219496  \n",
-       "7794            0.217215  \n",
+       "7925            0.268006  \n",
+       "7926            0.265570  \n",
+       "7927            0.263163  \n",
+       "7928            0.260784  \n",
+       "7929            0.258433  \n",
        "\n",
-       "[7795 rows x 7 columns]"
+       "[7930 rows x 7 columns]"
       ]
      },
      "execution_count": 8,
@@ -684,8 +689,8 @@
    "id": "61c7dfbf",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-09-20T11:38:40.499045Z",
-     "start_time": "2023-09-20T11:38:40.105402Z"
+     "end_time": "2023-09-26T16:22:47.127115Z",
+     "start_time": "2023-09-26T16:22:46.845674Z"
     }
    },
    "outputs": [],
