--- a/Update_Data_val_SmodelS/ppZpjj/Val_data.ipynb
+++ b/Update_Data_val_SmodelS/ppZpjj/Val_data.ipynb
@@ -23,6 +23,50 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2023-10-11T16:46:16.653Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING in databaseObj.fetchFromScratch() in 691: downloading the database from https://smodels.github.io/database/official300-beta and caching in /home/camila/.cache/smodels. If you want the pickled database file to be cached in a different location, set the environment variable SMODELS_CACHEDIR, e.g. to '/tmp'.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "loading >...................................................done.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING in databaseObj.fetchFromScratch() in 691: downloading the database from https://smodels.github.io/database/fastlim300-beta and caching in /home/camila/.cache/smodels. If you want the pickled database file to be cached in a different location, set the environment variable SMODELS_CACHEDIR, e.g. to '/tmp'.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "loading >....................................."
+     ]
+    }
+   ],
+   "source": [
+    "from smodels.experiment.databaseObj import Database\n",
+    "database = Database(\"official+fastlim\")\n",
+    "print(database)"
+   ]
+  },
+  {
    "cell_type": "raw",
    "metadata": {},
    "source": [
@@ -100,7 +144,7 @@
     }
    ],
    "source": [
-    "path = \"/home/yoxara/smodels/smodels-database\"\n",
+    "path = \"/home/camila/smodels/smodels-database\"\n",
     "db = Database(path)"
    ]
   },
@@ -407,7 +451,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -422,8 +466,7 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.10.12"
-  },
-  "orig_nbformat": 4
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
