--- a/notebooks/SmodelS/getResults.ipynb
+++ b/notebooks/SmodelS/getResults.ipynb
@@ -16,7 +16,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_6558/1716768401.py:5: DeprecationWarning: the imp module is deprecated in favour of importlib and slated for removal in Python 3.12; see the module's documentation for alternative uses\n",
+      "/tmp/ipykernel_2881/1716768401.py:5: DeprecationWarning: the imp module is deprecated in favour of importlib and slated for removal in Python 3.12; see the module's documentation for alternative uses\n",
       "  import glob,imp,os,sys\n"
      ]
     }
@@ -77,7 +77,7 @@
      "output_type": "stream",
      "text": [
       "INFO in databaseObj.loadBinaryFile() in 526: loading binary db file /home/yoxara/smodels/smodels-database/db3.pcl format version 214\n",
-      "INFO in databaseObj.loadBinaryFile() in 533: Loaded database from /home/yoxara/smodels/smodels-database/db3.pcl in 2.7 secs.\n",
+      "INFO in databaseObj.loadBinaryFile() in 533: Loaded database from /home/yoxara/smodels/smodels-database/db3.pcl in 13.0 secs.\n",
       "INFO in modelTester.loadDatabaseResults() in 498: Including non-validated results\n",
       "INFO in modelTester.testPoints() in 358: Running SModelS for 1870 files with a single process. Messages will be redirected to smodels.log\n"
      ]
@@ -131,7 +131,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1870\n"
+      "3740\n"
      ]
     }
    ],
@@ -219,7 +219,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Final number of data points: 1870\n"
+      "Final number of data points: 7480\n"
      ]
     }
    ],
@@ -248,12 +248,84 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1870\n"
+      "7480\n"
      ]
     }
    ],
    "source": [
     "print(len(dataDF))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Database version: 3.0.0-beta\n",
+      "-----------------------------\n",
+      "206 experimental results: 93 CMS, 113 ATLAS, 77 @ 8 TeV, 129 @ 13 TeV\n",
+      "1322 datasets, 7269 txnames.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from smodels.experiment.databaseObj import Database\n",
+    "path = \"/home/yoxara/smodels/smodels-database\" # Path to database\n",
+    "db = Database(path) # Load database and model\n",
+    "#analysis_list = ['all']%['CMS-PAS-EXO-20-008', 'ATLAS-EXOT-2018-48', 'ATLAS-EXOT-2019-03', 'CMS-EXO-19-012','CMS-EXO-20-004-eff']\n",
+    "#db.selectExpResults(analysisIDs=analysis_list, txnames='all')#, useNonValidated=True)#, dataTypes='upperLimit'\n",
+    "print(db)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Database version: 3.0.0-beta\n",
+      "-----------------------------\n",
+      "1 experimental results: 0 CMS, 1 ATLAS, 0 @ 8 TeV, 1 @ 13 TeV\n",
+      "1 datasets, 2 txnames.\n",
+      " [<smodels.experiment.expResultObj.ExpResult object at 0x7f7093572080>]\n",
+      "Database version: 3.0.0-beta\n",
+      "-----------------------------\n",
+      "1 experimental results: 1 CMS, 0 ATLAS, 0 @ 8 TeV, 1 @ 13 TeV\n",
+      "1 datasets, 1 txnames.\n",
+      " [<smodels.experiment.expResultObj.ExpResult object at 0x7f7093572050>]\n",
+      "Database version: 3.0.0-beta\n",
+      "-----------------------------\n",
+      "1 experimental results: 0 CMS, 1 ATLAS, 0 @ 8 TeV, 1 @ 13 TeV\n",
+      "1 datasets, 1 txnames.\n",
+      " [<smodels.experiment.expResultObj.ExpResult object at 0x7f7093571f30>]\n",
+      "Database version: 3.0.0-beta\n",
+      "-----------------------------\n",
+      "1 experimental results: 0 CMS, 1 ATLAS, 0 @ 8 TeV, 1 @ 13 TeV\n",
+      "1 datasets, 2 txnames.\n",
+      " [<smodels.experiment.expResultObj.ExpResult object at 0x7f7093572050>]\n",
+      "Database version: 3.0.0-beta\n",
+      "-----------------------------\n",
+      "2 experimental results: 2 CMS, 0 ATLAS, 0 @ 8 TeV, 2 @ 13 TeV\n",
+      "23 datasets, 46 txnames.\n",
+      " [<smodels.experiment.expResultObj.ExpResult object at 0x7f7093573fa0>, <smodels.experiment.expResultObj.ExpResult object at 0x7f7093571ae0>]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(db, db.getExpResults('ATLAS-EXOT-2019-03'))\n",
+    "print(db, db.getExpResults('CMS-PAS-EXO-20-008'))\n",
+    "print(db, db.getExpResults('ATLAS-EXOT-2018-48'))\n",
+    "print(db, db.getExpResults('ATLAS-EXOT-2019-03'))\n",
+    "print(db, db.getExpResults('CMS-SUS-20-004'))\n",
+    "\n"
    ]
   },
   {
